[gd_scene load_steps=4 format=2]

[ext_resource path="res://4 - Resources/DungeonFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://1 - Scenes/UI/Options.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=7]
size = 128
outline_size = 8
outline_color = Color( 0.156863, 0.156863, 0.156863, 1 )
font_data = ExtResource( 1 )

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -205.0
margin_right = 275.0
margin_bottom = 381.0
color = Color( 0.196078, 0.196078, 0.196078, 0.941176 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -171.0
margin_right = 240.0
margin_bottom = 366.0
custom_constants/separation = 24

[node name="MusicVolume" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 53.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="VBoxContainer/MusicVolume"]
margin_right = 123.0
margin_bottom = 53.0
text = "Music"

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicVolume"]
margin_left = 139.0
margin_right = 480.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="SFXVolume" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 480.0
margin_bottom = 130.0
custom_constants/separation = 26

[node name="Label" type="Label" parent="VBoxContainer/SFXVolume"]
margin_right = 113.0
margin_bottom = 53.0
text = "SFX  "

[node name="HSlider" type="HSlider" parent="VBoxContainer/SFXVolume"]
margin_left = 139.0
margin_right = 480.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.001
max_value = 1.0
step = 0.001
value = 1.0

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -226.0
margin_top = 103.0
margin_right = 226.0
margin_bottom = 290.0
custom_fonts/font = SubResource( 7 )
text = "Options"
align = 1
valign = 1
autowrap = true

[node name="BackButton" type="Button" parent="."]
margin_left = 720.0
margin_top = 800.0
margin_right = 1200.0
margin_bottom = 859.0
text = "Back"

[connection signal="value_changed" from="VBoxContainer/MusicVolume/HSlider" to="." method="change_music_vol"]
[connection signal="value_changed" from="VBoxContainer/SFXVolume/HSlider" to="." method="change_sfx_vol"]
